--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -11,7 +11,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawabe/restart"
+            android:background="@drawable/restart"
             android:onClick="restart" />
         <View
             android:layout_width="1dp"
